--- a/domybayes.ipynb
+++ b/domybayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,19 +364,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# P off A\n",
-    "POA = 0.4\n",
+    "POA = None\n",
     "# P off B\n",
-    "POB = 0.5\n",
+    "POB = None\n",
     "\n",
     "# P off A given B\n",
     "POAGB = None\n",
     "# P off B given A\n",
-    "POBGA = 0.0002\n",
+    "POBGA = None\n",
     "\n",
     "# P off A and B | P off B and A (same)\n",
     "POAAB = None\n",
@@ -390,30 +390,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "P of A: 40.0%\n",
-      "P of B: 50.0%\n",
-      "P off A given B: 0.016%\n",
-      "P off B given A: 0.02%\n",
-      "P off A and B ∩: 0.008%\n",
-      "P off B and A ∩: 0.01%\n",
-      "P off A or B ∪: 89.992%\n",
-      "P off B or A ∪: 89.99000000000001%\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA\n",
     "print('\\n')\n",
     "print(f'P of A: {find_POA(POA, POB, POAGB, POBGA, POAAB, POBAA, POAOB, POBOA, PONA, PONB, POBGNA, POAGNB, POAANB, POBANA, POAONB, POBONA)*100}%')\n",
@@ -432,29 +412,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "NOT ---------------------\n",
-      "P of not A: 80.0%\n",
-      "P of not B: 99.99%\n",
-      "P off A given not B: 0.004000400040004%\n",
-      "P off B given not A: 0.005%\n",
-      "P off A and not B: 0.004%\n",
-      "P off B and not A: 2e-06%\n",
-      "P off A or not B: 119.98599999999999%\n",
-      "P off B or not A: 80.00999800000001%\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOT\n",
     "print('\\n')\n",
