--- a/domyestimation.ipynb
+++ b/domyestimation.ipynb
@@ -21,11 +21,11 @@
     "    for x in range(-4000,4000):\n",
     "        answer = normal_dist(x/1000, False)\n",
     "        if answer == kvantil:\n",
-    "            print(f'G(z≤k) = {x/10000}')\n",
-    "            return x/10000\n",
+    "            print(f'G(z≤k) = {x/1000}')\n",
+    "            return x/1000\n",
     "        if answer-0.0001 == kvantil:\n",
-    "            print(f'G(z≤k) = {x/10000}')\n",
-    "            return x/10000"
+    "            print(f'G(z≤k) = {x/1000}')\n",
+    "            return x/1000"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +92,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Binomial Estimation\n",
+    "# Binomial Estimation to normal converter\n",
     "# Eks 23 syk av 300\n",
-    "# P = sannsynlighet for  å bli smittet bland de 300\n",
-    "# G(-1.3000) = P(z<-1.3000) = 0.0968 - 9.68% chance of getting sick \n",
+    " \n",
     "n = 25\n",
     "x = 14\n",
     "\n",
-    "alpha = 95\n",
+    "alpha = 0.95\n",
     "\n",
     "p = x/n\n",
     "#p = 0.5\n",
@@ -118,13 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Estimated lambda (λ): 3.3111\n",
+      "Variance (σ2) 0.2713\n",
+      "Estimated Standard deviation (σ): 0.2713\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Poisson Multiple events over time til normal\n",
-    "events = [0,1,2,3]\n",
-    "time = [0.05,0.25,0.5,0.2]\n",
+    "events = [3,4,0,2,2,5,3,4,3,4]\n",
+    "time = [0,1,2,3,4,5,6,7,8,9]\n",
     "\n",
     "y = len(events)\n",
     "x = 0\n",
@@ -138,16 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((λ * t): 30.0 ≥ 10)\n",
+      "G(z≤k) = 1.645\n",
+      "Poisson: (3.0000,0.56) ---> Normal(90.0000,9.4868)\n",
+      "0.95% KI for λ: [2.0990,3.9010]\n"
+     ]
+    }
+   ],
    "source": [
     "# Poisson Single numbers til normal\n",
     "# y hendelser over t tiden (y = y1+y2+y3, t = 3)\n",
     "# Estimated lambda (λ): 5.5000 estimated 5.5 tornadoes withinh 11 years\n",
     "# G(2.3452) = P(z<2.3452) = 0.9542 - 95.42% chance of a tornado within 2.34 years\n",
-    "t = 47\n",
-    "y = 26\n",
+    "t = 10\n",
+    "y = 30\n",
     "alpha = 0.95\n",
     "# Get data from cell 1 over\n",
     "lmbd = y/t\n",
