--- a/domyhypotest.ipynb
+++ b/domyhypotest.ipynb
@@ -96,8 +96,6 @@
     "        else:\n",
     "            print(f'Testobservatoren er ikke innenfor vårt forkastningsområdet, som betyr at vi forkaster H0 på {alpha*100}% nivå')\n",
     "        \n",
-    "\n",
-    "\n",
     "    print('\\n')"
    ]
   },
@@ -322,9 +320,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1: µ < 265\n",
+      "H0: µ ≥ 265\n",
+      "Forkaster H0 dersom µ er mye mindre enn 265\n",
+      "\n",
+      "Finn hva \"mye mindre\" er\n",
+      "P(x̄≤k | µ=265) = 0.05\n",
+      "G((k-265)/6.324555320336758) = 0.05\n",
+      "(k-265)/6.324555320336758 = -1.645\n",
+      "k = 265 - (1.645 * 6.324555320336758) = 254.59610649804603\n",
+      "\n",
+      "Mye mindre er dersom x̄ ≤ 254.59610649804603\n",
+      "Her kan vi se at x̄ \"262.2733\" IKKE er mye mindre enn vår forventet verdi \"265\",\n",
+      "som vil si at vi beholder vår H0 hypotese på 5.0% nivå\n",
+      "\n",
+      "Hva er sjansen for P(x̄≤262.2733 | µ=265)\n",
+      "Finn p-verdi\n",
+      "G((262.2733 - 265) / 6.324555320336758) = G(-0.431)\n",
+      "G(-0.4311) = 0.3332\n",
+      "P-verdien = 0.3332, altså det er 33.32% sjanse for at et av våre resultater er ≤ 262.2733\n",
+      "\n",
+      "Styrken av P(forkaster H0 | µ = 262.2733) er: 0.1313 altså 13.13%\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# en sidig\n",
     "# n = tries\n",
@@ -332,15 +360,14 @@
     "# Std = σ\n",
     "# Alpha = signifikansnivå\n",
     "# Found average = x̄\n",
-    "n = 2708\n",
-    "excpected_average = 2536\n",
-    "std = 3\n",
+    "n = 10\n",
+    "excpected_average = 265\n",
+    "std = 20\n",
     "alpha = 0.05\n",
-    "found_average = 247.53\n",
+    "found_average = 262.2733\n",
     "\n",
-    "#valg = 'ned'\n",
-    "valg = 'opp'\n",
-    "\n",
+    "valg = 'ned'\n",
+    "#valg = 'opp'\n",
     "find_hypo_fler(excpected_average,found_average,n,std,alpha,valg)\n"
    ]
   },
@@ -371,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1049,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -379,16 +406,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Gjennomsnitt: 135.0, Median: 149, Standardavvik: 19.9165\n",
-      "H1: µ < 140\n",
-      "H0: µ ≥ 140\n",
-      "Forkaster H0 dersom µ er mye mindre enn 140\n",
+      "Gjennomsnitt: 0.0, Median: 0.1, Standardavvik: 0.1414\n",
+      "H1: µ < 0\n",
+      "H0: µ ≥ 0\n",
+      "Forkaster H0 dersom µ er mye mindre enn 0\n",
       "Mye mindre er dersom x̄ ≤ T\n",
-      "s = sqrt(1190.0/(4-1)) = 19.9165\n",
-      "T = ((135.0 - 140)/(19.9165/sqrt(4))) = -0.5021\n",
+      "s = sqrt(0.020000000000000004/(2-1)) = 0.1414\n",
+      "T = ((0.0 - 0)/(0.1414/sqrt(8))) = 0.0\n",
       "\n",
-      "Testobservator T: -0.5021\n",
-      "Forkastningsområde: (-∞, -2.3534] ∪ [2.3534, ∞)\n",
+      "Testobservator T: 0.0000\n",
+      "Forkastningsområde: (-∞, -1.8946] ∪ [1.8946, ∞)\n",
       "Testobservatoren er innenfor vårt forkastningsområdet, som betyr at vi beholder H0 på 5.0% nivå\n",
       "\n",
       "\n"
@@ -402,10 +429,10 @@
     "# Std = σ = ukjent\n",
     "# Alpha = signifikansnivå\n",
     "# Data = list of given numbers\n",
-    "n = 215\n",
-    "excpected_average = 140\n",
+    "n = 8\n",
+    "excpected_average = 0\n",
     "alpha = 0.05\n",
-    "data = []\n",
+    "data = [-0.1,0.1]\n",
     "\n",
     "valg = 'ned'\n",
     "#valg = 'opp'\n",
