--- a/graphs/domynormadist.ipynb
+++ b/graphs/domynormadist.ipynb
@@ -148,29 +148,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "P(X ≤ 100): 0.0038\n",
-      "P(X ≥ 100): 0.9962\n",
-      "P(100 ≤ X ≤ 100): 0.0016000000000000003\n"
+      "P(X ≤ -0.1): 0.4207\n",
+      "P(X ≥ -0.1): 0.5792999999999999\n",
+      "P(-0.1 ≤ X ≤ 0.1): 0.9722\n"
      ]
     }
    ],
    "source": [
     "# Normalfordeling med custom center og std\n",
-    "my = 140\n",
-    "std = 15\n",
+    "my = 0\n",
+    "std = 0.5\n",
     "\n",
-    "x = 1000\n",
+    "#x = 0\n",
     "#std = std / math.sqrt(x)\n",
     "\n",
-    "probability = 100\n",
-    "gap = 0\n",
+    "probability = -0.1\n",
+    "gap = 0.2\n",
     "\n",
     "print(f'P(X ≤ {probability}): {custom_normal_dist(my,std,probability,False)}')\n",
     "print(f'P(X ≥ {probability}): {1-custom_normal_dist(my,std,probability,False)}')\n",
@@ -189,16 +189,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability of set < 0.1: 1.0000\n",
+      "Probability of set > 0.1: 0.0000\n",
+      "Probability of 0.1 < set < 0.1 : 0.0000\n"
+     ]
+    }
+   ],
    "source": [
     "# Finn sannsnylighet for at eks vekta av 10 fisker er mer enn 1.2kg\n",
-    "my = 1.8500\n",
-    "std = 1.3601\n",
-    "n = 5\n",
-    "probability = 4\n",
-    "gap = 1\n",
+    "my = 0\n",
+    "std = 0.048\n",
+    "n = 36\n",
+    "probability = 0.1\n",
+    "gap = 0\n",
     "set_normal_dist(my, std, n, probability, gap)"
    ]
   }
