--- a/domyKI.ipynb
+++ b/domyKI.ipynb
@@ -151,11 +151,11 @@
    "source": [
     "# KONFIDENTSINTERVALL Normalfordelt\n",
     "# H0 : μ ≥excpected mot H1 : μ < 311\n",
-    "pow_numbers = [275,280,240,270,230,230,250,280,285,270]\n",
-    "n = 10\n",
-    "x = 127.33\n",
-    "excepted = 0\n",
-    "std = 20\n",
+    "pow_numbers = []\n",
+    "n = 1\n",
+    "x = 19\n",
+    "excepted = 18\n",
+    "std = 0.4\n",
     "mean = x/n\n",
     "alpha = .99\n",
     "\n",
@@ -227,14 +227,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5% KI for σ2: [0.3983,0.3990]\n",
+      "0.5% KI for σ: [0.6311,0.6317]\n"
+     ]
+    }
+   ],
    "source": [
     "# KI for Variance σ2 and Standard deviation σ\n",
-    "n = 261\n",
-    "s = 21.4476\n",
-    "alpha = 99\n",
+    "n = 100\n",
+    "s = 0.40\n",
+    "alpha = 0.5\n",
     "\n",
     "var_and_std_KI(n,s,alpha)"
    ]
