--- a/domyhypotest.ipynb
+++ b/domyhypotest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "        print(f'H0: µ ≥ {excpected_average}')\n",
     "        print(f'Forkaster H0 dersom µ er mye mindre enn {excpected_average}')\n",
     "        under,over = custom_normal_dist(excpected_average,found_average,n,std,alpha,'mye_mindre')\n",
-    "        a, b = find_leftandright(excpected_average,std,n,alpha)\n",
+    "        a, b = find_leftandright(excpected_average,found_average,std,n,alpha)\n",
     "        print(f'Mye mindre er dersom x̄ ≤ {under}')\n",
     "        \n",
     "        if found_average <= under:\n",
@@ -40,7 +40,7 @@
     "        print(f'H0: µ ≤ {excpected_average}')\n",
     "        print(f'Forkaster H0 dersom µ er mye større enn {excpected_average}')\n",
     "        under,over = custom_normal_dist(excpected_average,found_average,n,std,alpha,'mye_storre')\n",
-    "        a, b = find_leftandright(excpected_average,std,n,alpha)\n",
+    "        a, b = find_leftandright(excpected_average,found_average,std,n,alpha)\n",
     "        print(f'Mye større er dersom x̄ ≥ {over}')\n",
     "        \n",
     "        if found_average >= over:\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,12 @@
     "        print(f'Forkaster H0 dersom µ er mye mindre enn {excpected_average}')\n",
     "\n",
     "        t_v, value = find_t(alpha,n,data,excpected_average)\n",
+    "        t_v = abs(t_v)\n",
     "        print(f'Mye mindre er dersom x̄ ≤ T')\n",
-    "        \n",
     "        show_work(excpected_average,found_average,n,None,alpha,None,None,None,'find_tobs')\n",
     "        print(f'Testobservator T: {value:.4f}')\n",
-    "        print(f'Forkastningsområde: (-∞, {t_v}] ∪ [{-t_v}, ∞)')\n",
-    "        if value <= -t_v:\n",
+    "        print(f'Forkastningsområde: (-∞, {-t_v}] ∪ [{t_v}, ∞)')\n",
+    "        if value >= -t_v:\n",
     "            print(f'Testobservatoren er innenfor vårt forkastningsområdet, som betyr at vi beholder H0 på {alpha*100}% nivå')\n",
     "        else:\n",
     "            print(f'Testobservatoren er ikke innenfor vårt forkastningsområdet, som betyr at vi forkaster H0 på {alpha*100}% nivå')\n",
@@ -86,12 +86,13 @@
     "        print(f'Forkaster H0 dersom µ er mye mer enn {excpected_average}')\n",
     "\n",
     "        t_v, value = find_t(alpha,n,data,excpected_average)\n",
+    "        t_v = abs(t_v)\n",
     "        print(f'Mye mer er dersom x̄ ≥ T')\n",
     "        \n",
     "        show_work(excpected_average,found_average,n,None,alpha,None,None,None,'find_tobs')\n",
     "        print(f'Testobservator T: {value:.4f}')\n",
-    "        print(f'Forkastningsområde: (-∞, {t_v}] ∪ [{-t_v}, ∞)')\n",
-    "        if value >= t_v:\n",
+    "        print(f'Forkastningsområde: (-∞, {-t_v}] ∪ [{t_v}, ∞)')\n",
+    "        if value <= t_v:\n",
     "            print(f'Testobservatoren er innenfor vårt forkastningsområdet, som betyr at vi beholder H0 på {alpha*100}% nivå')\n",
     "        else:\n",
     "            print(f'Testobservatoren er ikke innenfor vårt forkastningsområdet, som betyr at vi forkaster H0 på {alpha*100}% nivå')\n",
@@ -101,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_hypo_to(excpected_average,found_average,n,std,alpha):\n",
     "    print(f'H1: µ ≠ {excpected_average}')\n",
     "    print(f'H0: µ = {excpected_average}')\n",
-    "    a, b = find_leftandright(excpected_average,std,n,alpha)\n",
+    "    a, b = find_leftandright(excpected_average,found_average,std,n,alpha)\n",
     "    print(f'P(x̄<k1, eller x̄>k2 | µ={excpected_average})\\n')\n",
     "    show_work(excpected_average,found_average,n,None,alpha,None,None,None,'kvantiler')\n",
     "    print(f'Forkastningsområde: (-∞, {a}] ∪ [{b}, ∞)')\n",
@@ -120,20 +121,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_strength(found_average,a,b,n,std):\n",
     "    g_1 = (a - found_average)/(std/(math.sqrt(n)))\n",
     "    g_2 = (b - found_average)/(std/(math.sqrt(n)))\n",
-    "    answer = round(normal_dist(g_1) + (1-(normal_dist(g_2))),4)\n",
+    "\n",
+    "    answer = normal_dist(g_1) + (1-(normal_dist(g_2)))\n",
     "    print(f'Styrken av P(forkaster H0 | µ = {found_average}) er: {answer} altså {answer*100}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,11 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_leftandright(excpected_average,std,n,alpha):\n",
+    "def find_leftandright(excpected_average,found_average,std,n,alpha):\n",
     "    k = find_k(alpha)\n",
     "    antstd = std/(math.sqrt(n))\n",
     "    a = round(excpected_average + ((k * antstd)), 4)\n",
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +281,7 @@
     "        print(f'k = {excpected_average} + ({abs(alpha)} * {antstd}) = {right}\\n')\n",
     "    if work_type == 'kvantiler':\n",
     "        pos_k = abs(find_k(alpha))\n",
-    "        a, b = find_leftandright(excpected_average,std,n,alpha)\n",
+    "        a, b = find_leftandright(excpected_average,found_average,std,n,alpha)\n",
     "        \n",
     "        print('Finner k1')\n",
     "        print(f'P(x̄<k1) = {alpha})')\n",
@@ -320,34 +322,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H1: µ < 265\n",
-      "H0: µ ≥ 265\n",
-      "Forkaster H0 dersom µ er mye mindre enn 265\n",
+      "H1: µ > 0.05\n",
+      "H0: µ ≤ 0.05\n",
+      "Forkaster H0 dersom µ er mye større enn 0.05\n",
       "\n",
-      "Finn hva \"mye mindre\" er\n",
-      "P(x̄≤k | µ=265) = 0.05\n",
-      "G((k-265)/6.324555320336758) = 0.05\n",
-      "(k-265)/6.324555320336758 = -1.645\n",
-      "k = 265 - (1.645 * 6.324555320336758) = 254.59610649804603\n",
+      "Finn hva \"mye større\" er\n",
+      "P(x̄≥k | µ=0.05) = 0.05\n",
+      "G((k+0.05)/0.21793030996169394) = 0.05\n",
+      "(k+0.05)/0.21793030996169394 = 1.645\n",
+      "k = 0.05 + (1.645 * 0.21793030996169394) = 0.40849535988698654\n",
       "\n",
-      "Mye mindre er dersom x̄ ≤ 254.59610649804603\n",
-      "Her kan vi se at x̄ \"262.2733\" IKKE er mye mindre enn vår forventet verdi \"265\",\n",
+      "Mye større er dersom x̄ ≥ 0.40849535988698654\n",
+      "Her kan vi se at x̄ \"0.078\" IKKE er mye større enn vår forventet verdi \"0.05\",\n",
       "som vil si at vi beholder vår H0 hypotese på 5.0% nivå\n",
       "\n",
-      "Hva er sjansen for P(x̄≤262.2733 | µ=265)\n",
+      "Hva er sjansen for P(x̄≥0.078 | µ=0.05)\n",
       "Finn p-verdi\n",
-      "G((262.2733 - 265) / 6.324555320336758) = G(-0.431)\n",
-      "G(-0.4311) = 0.3332\n",
-      "P-verdien = 0.3332, altså det er 33.32% sjanse for at et av våre resultater er ≤ 262.2733\n",
+      "1-G((0.078 - 0.05) / 0.21793030996169394) = 1-G(0.1285)\n",
+      "1-G(0.1285) = 0.4489\n",
+      "P-verdien = 0.4489, altså det er 44.89% sjanse for at et av våre resultater er ≥ 0.078\n",
       "\n",
-      "Styrken av P(forkaster H0 | µ = 262.2733) er: 0.1313 altså 13.13%\n",
+      "Styrken av P(forkaster H0 | µ = 0.078) er: 0.10279999999999997 altså 10.279999999999998%\n",
       "\n",
       "\n"
      ]
@@ -360,22 +362,54 @@
     "# Std = σ\n",
     "# Alpha = signifikansnivå\n",
     "# Found average = x̄\n",
-    "n = 10\n",
-    "excpected_average = 265\n",
-    "std = 20\n",
+    "n = 200\n",
+    "excpected_average = 0.05\n",
+    "std = 3.082\n",
     "alpha = 0.05\n",
-    "found_average = 262.2733\n",
-    "\n",
-    "valg = 'ned'\n",
-    "#valg = 'opp'\n",
+    "found_average = 0.078\n",
+    "#valg = 'ned'\n",
+    "valg = 'opp'\n",
     "find_hypo_fler(excpected_average,found_average,n,std,alpha,valg)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1: µ ≠ 0.05\n",
+      "H0: µ = 0.05\n",
+      "P(x̄<k1, eller x̄>k2 | µ=0.05)\n",
+      "\n",
+      "Finner k1\n",
+      "P(x̄<k1) = 0.025)\n",
+      "P(x̄<k1) = G((k1 - 0.05) / 2) = 0.025)\n",
+      "(k1 - 0.05)/2 = -1.96\n",
+      "k1 = 0.05 - (1.96 * 0.21793030996169394) = -0.3771\n",
+      "\n",
+      "Finner k2\n",
+      "P(x̄<k2) = 0.025\n",
+      "P(x̄<k2) = G((k2 - 0.05) / 2) = 0.025\n",
+      "(k2 - 0.05)/2 = -1.96\n",
+      "k2 = 0.05 + (1.96 * 0.21793030996169394) = 0.4771\n",
+      "\n",
+      "\n",
+      "Forkast H0 hvis x̄ ≤ -0.3771 eller x̄ ≥ 0.4771\n",
+      "Forkastningsområde: (-∞, -0.3771] ∪ [0.4771, ∞)\n",
+      "(x̄: 0.0178) er innenfor forkastningsområdet så H0 forkastes ikke på 2.5% nivå\n",
+      "\n",
+      "Finn p-verdi\n",
+      "2*P(x̄≥0.0178) = 2*(1-G((0.0178 - 0.05)/0.21793030996169394 = 2*(1-G(-0.1477536557703234) = 1.1174\n",
+      "P-verdien = 1.1174, altså det er 111.74% sjanse for at et av våre resultater er ≥ 0.0178\n",
+      "\n",
+      "Styrken av P(forkaster H0 | µ = 0.0178) er: 0.05249999999999996 altså 5.2499999999999964%\n"
+     ]
+    }
+   ],
    "source": [
     "# To sidig\n",
     "# n = tries\n",
@@ -383,22 +417,22 @@
     "# Std = σ\n",
     "# Alpha = signifikansnivå\n",
     "# Found average = x̄\n",
-    "n = 9\n",
-    "excpected_average = 50\n",
-    "std = 6\n",
-    "alpha = .05\n",
+    "n = 200\n",
+    "excpected_average = 0.05\n",
+    "std = 3.082\n",
+    "alpha = 0.05\n",
     "\n",
     "# Får så resultatet av de nye målingene også må jeg se om det nye resultatet\n",
     "# er innenfor forkastningsområdet vi har funnet. om det er innenfor så forkaster vi\n",
     "# ikke h0, men om det er utenfor så må vi forkaste h0\n",
-    "found_average = 49\n",
+    "found_average = 0.178\n",
     "\n",
     "find_hypo_to(excpected_average,found_average,n,std,alpha/2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -406,16 +440,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Gjennomsnitt: 0.0, Median: 0.1, Standardavvik: 0.1414\n",
-      "H1: µ < 0\n",
-      "H0: µ ≥ 0\n",
-      "Forkaster H0 dersom µ er mye mindre enn 0\n",
+      "Gjennomsnitt: 18.85, Median: 18.85, Standardavvik: 0.2122\n",
+      "H1: µ < 0.05\n",
+      "H0: µ ≥ 0.05\n",
+      "Forkaster H0 dersom µ er mye mindre enn 0.05\n",
       "Mye mindre er dersom x̄ ≤ T\n",
-      "s = sqrt(0.020000000000000004/(2-1)) = 0.1414\n",
-      "T = ((0.0 - 0)/(0.1414/sqrt(8))) = 0.0\n",
+      "s = sqrt(3.2412000000000014/(73-1)) = 0.2122\n",
+      "T = ((18.85 - 0.05)/(0.2122/sqrt(200))) = 1252.9319\n",
       "\n",
-      "Testobservator T: 0.0000\n",
-      "Forkastningsområde: (-∞, -1.8946] ∪ [1.8946, ∞)\n",
+      "Testobservator T: 1252.9319\n",
+      "Forkastningsområde: (-∞, -1.6525] ∪ [1.6525, ∞)\n",
       "Testobservatoren er innenfor vårt forkastningsområdet, som betyr at vi beholder H0 på 5.0% nivå\n",
       "\n",
       "\n"
@@ -429,10 +463,12 @@
     "# Std = σ = ukjent\n",
     "# Alpha = signifikansnivå\n",
     "# Data = list of given numbers\n",
-    "n = 8\n",
-    "excpected_average = 0\n",
+    "n = 200\n",
+    "excpected_average = 0.05\n",
     "alpha = 0.05\n",
-    "data = [-0.1,0.1]\n",
+    "data = []\n",
+    "for x in range(1849,1921+1):\n",
+    "    data.append(x/100)\n",
     "\n",
     "valg = 'ned'\n",
     "#valg = 'opp'\n",
