--- a/domyestimation.ipynb
+++ b/domyestimation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +88,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated My (µ): 0.0750\n",
+      "\n",
+      "SE(p) Estimated Standard deviation (σ): 0.0186\n",
+      "\n",
+      "Binomal(200.0000,0.0750) ---> Normal(15.0000,13.8750)\n",
+      "G(z≤k) = 1.645\n",
+      "G(z≤k) = 1.645\n",
+      "0.95% KI: [0.0444,0.1056]\n"
+     ]
+    }
+   ],
    "source": [
     "# Binomial Estimation to normal converter\n",
     "# Eks 23 syk av 300\n",
     " \n",
-    "n = 25\n",
-    "x = 14\n",
+    "n = 200\n",
+    "x = 15\n",
     "\n",
     "alpha = 0.95\n",
     "\n",
@@ -117,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -125,17 +140,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Estimated lambda (λ): 3.3111\n",
-      "Variance (σ2) 0.2713\n",
-      "Estimated Standard deviation (σ): 0.2713\n",
+      "Estimated lambda (λ): 18.7467\n",
+      "Variance (σ2) 1.1179\n",
+      "Estimated Standard deviation (σ): 1.1179\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Poisson Multiple events over time til normal\n",
-    "events = [3,4,0,2,2,5,3,4,3,4]\n",
-    "time = [0,1,2,3,4,5,6,7,8,9]\n",
+    "events = [19.1,19.1,19.5,18.6,18.2]\n",
+    "time = [1,2,3,4,5]\n",
     "\n",
     "y = len(events)\n",
     "x = 0\n",
@@ -149,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +173,7 @@
      "text": [
       "((λ * t): 30.0 ≥ 10)\n",
       "G(z≤k) = 1.645\n",
-      "Poisson: (3.0000,0.56) ---> Normal(90.0000,9.4868)\n",
+      "Poisson: (3.0000,0.075) ---> Normal(90.0000,9.4868)\n",
       "0.95% KI for λ: [2.0990,3.9010]\n"
      ]
     }
